# aidm

./: README.md  pyproject.toml  setup.cfg  todo's
ai_dm/core/: problem.py
ai_dm/environments/gym_envs/: gym_problem.py
ai_dm/environments/gymnasium_envs/: gymnasium_problem.py
ai_dm/search/: best_first_search.py  constraint.py  mcts.py
aidm/core/: defs.py  env.py  problem.py  resources.py  utils.py
aidm/environments/gym_envs/: gym_problem.py  multi_taxi.py
aidm/environments/gymnasium/: gymnasium_env.py  gymnasium_problem.py  spaces_utils.py  taxi_problem.py
aidm/environments/gymnasium_envs/: gymnasium_problem.py
aidm/environments/pddl/: pddl_env.py  pddl_problem.py
aidm/rl/: mcts.py  q_learning.py  utils.py
aidm/search/: best_first_search.py  constraint.py  frontier.py  heuristic.py  mcts.py  node.py
aidm/todos/gymnasium/: gymnasium_env.py  gymnasium_problem.py  taxi_problem.py
notebooks/: pddl.ipynb
tests/: ai_dm_tutorial_with_rl.ipynb  domain.pddl  gymnasium_key_tester.py  pddl.py  problem0.2.pddl  problem0.5.pddl  problem0.pddl  test_rl.py  test_search.py  test_taxi.py
tests/deprecated/: aidm_tutorial_with_rl.ipynb  delete  test_rl.py  test_taxi.py
